feat: authorization, endpoints, models
