# web-api/src/models/post-model.ts
@@ -1,0 +1,7 @@
+export type PostModel = {
+    topic: string;
+    message: string;
+    createdAt: Date;
+    updatedAt: Date;
+    userId: number;
+}
