# web-api/src/models/user-model.ts
@@ -1,0 +1,6 @@
+export type UserModel = {
+    id: number;
+    email: string;
+    password: string;
+    avatar: string;
+}
